@@ -9,7 +9,7 @@ type: software
 license: MPL-2.0
 title: 'minimaxApprox: Implementation of Remez Algorithm for Polynomial and Rational
   Function Approximation'
-version: 0.2.0
+version: 0.2.1
 doi: 10.5281/zenodo.8158855
 abstract: Implements the algorithm of Remez (1962) for polynomial minimax approximation
   and of Cody et al. (1968) <doi:10.1007/BF02162506> for rational minimax approximation.
@@ -30,7 +30,7 @@ preferred-citation:
   year: '2023'
   url: https://CRAN.R-project.org/package=minimaxApprox
   doi: 10.5281/zenodo.8158855
-  notes: R package version 0.2.0
+  notes: R package version 0.2.1
 repository: https://CRAN.R-project.org/package=minimaxApprox
 repository-code: https://github.com/aadler/MiniMaxApprox
 url: https://github.com/aadler/MiniMaxApprox
