@@ -2,7 +2,7 @@ Package: minimaxApprox
 Type: Package
 Title: Implementation of Remez Algorithm for Polynomial and Rational Function
     Approximation
-Version: 0.2.0
+Version: 0.2.1
 Date: 2023-09-04
 Authors@R: person(given="Avraham", family="Adler",role=c("aut", "cre", "cph"),
     email="Avraham.Adler@gmail.com", comment = c(ORCID = "0000-0002-3039-0703"))
