@@ -10,5 +10,5 @@ bibentry(bibtype     = "Manual",
          year         = "2023",
          url          = "https://CRAN.R-project.org/package=minimaxApprox",
          doi          = "10.5281/zenodo.8158855",
-         note         = "R package version 0.2.0"
+         note         = "R package version 0.2.1"
 )
